# Histogram_stl_format

./: CMakeLists.txt  Makefile  README.md  a.out  add_area_to_cell.cpp  box_1x1x1.stl  file1  histogram  initialize.cpp  main.cpp  print_errors.cpp  read_facet.cpp  read_facet_add.cpp  string_to_double.cpp  test.stl  view  viewer.hpp  viz.py
